--- a/style.css
+++ b/style.css
@@ -1,73 +1,135 @@
-body{
+*{
 	margin: 0;
 	padding: 0;
-	background: url(background.jpg) no-repeat;
-	background-attachment: fixed;
-	background-size: cover; 
 }
 
-.box{
-	width: 450px;
-	background: rgba(0, 0, 0, 0.4);
-	padding: 40px;
-	text-align: center;
-	margin: auto;
-	margin-top: 5%;
-	color: white;
+body{
+	background: #e6e6e6;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-.box-img{
-	border-radius: 50%;
-	width: 300px;
-	height: 320px; 
-}
-
-.box h1{
-	font-size: 40px;
-	letter-spacing: 5px;
-	font-weight: 100;
-}
-
-.box h5{
-	font-size: 20px;
-	letter-spacing: 5px;
-	font-weight: 100;
-}	
-
-.box p{
-	font-size: 15px;
-	letter-spacing: 3px;
-	font-weight: 100;
-	line-height: 30px;
-	text-align: justify;
-}
-
-
-.box #logos ul{
-	margin: 0;
-	padding: 0; 
-
-}
-.box li{
-	display: inline-block;
-	margin-right: 46px;
-	list-style: none;
+	font-size: 1em
 	
 }
-.box li a{
+
+#cabecalho{
+	background: #f7b600;
+	padding: 10px;
+
+}
+
+#logo{
+	text-align: center;
+	
+}
+
+#menu{
+	margin-top: 15px;
+	
+}
+
+.branco{
 	color: white;
+}
+
+a{
 	text-decoration: none;
-	font-size: 45px;
-	transition: all ease-in-out 250ms;
+	
+
 }
 
-.box li a:hover{
-	color: #b9b9b9
+a:link, a:visited{
+color: #f7b600;
+
+}
+
+a:hover{
+	text-decoration: underline; ;
+	
 }
 
 
-.cor1{
-	font-weight: bold;
-	color: #ADFF2F;
+#menu a:link, #menu a:visited{
+color: #FFF;
+padding: 8px 12px;
 }
+
+#menu a:hover{
+	background-color: white; /*cor do background*/
+	color: #f7b600; /*cor da letra*/
+	padding: 10px; /*espaçamento da letra com o background*/
+	text-decoration: none; /*tirar o underline padrão*/
+}
+
+#logo, #menu{
+	padding: 10px;
+}
+
+#area-principal{
+	width: 920px; /*da ponta branca da postagem ate a ponta da area lateral*/
+	margin: 0 auto;
+	
+}
+
+#area-postagem{
+	width: 660px;
+	background: white;
+	padding: 10px;
+	margin-top: 15px;
+	float: left;
+	margin-bottom: 20px;
+}
+
+#area-lateral{
+	margin-top: 15px;
+	 width: 220px;
+    float: right;
+
+}
+
+#rodape{
+	clear: both;
+	text-align: center;
+	padding: 15px;
+	background: #CCC;
+
+}
+
+.conteudo-lateral{
+	background: white;
+    padding:10px;
+    margin-bottom:20px; 
+
+}
+
+.postagem-lateral{
+	font-size:0.8em;
+    padding: 5px;
+    border-bottom:1px dotted #CCC;
+
+}
+
+.postagem{
+	padding: 20px;
+    margin-bottom:20px;
+    background: white;
+
+}
+
+h1{
+	font-size: 2.5em;
+	color: #4e4e4e;
+}
+
+h2{
+	margin-top: 10px;
+	color: #f7b600; 
+}
+
+h3{
+	background: #CCC;
+	padding: 5px;
+}
+
+img{
+	margin-top: 10px;
+}
+
